[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Other/editor_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/States/ChartState/ChartSideHUD.gd" type="Script" id=2]

[node name="ChartSideHUD" type="Control"]
margin_right = 312.0
margin_bottom = 419.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="TabContainer/File"]
margin_left = 16.0
margin_top = 48.0
margin_right = 130.0
margin_bottom = 80.0
focus_mode = 1
mouse_filter = 1
enabled_focus_mode = 1
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAsButton" type="Button" parent="TabContainer/File"]
margin_left = 16.0
margin_top = 85.0
margin_right = 130.0
margin_bottom = 103.0
focus_mode = 1
mouse_filter = 1
enabled_focus_mode = 1
text = "Save As..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="TabContainer/File"]
margin_left = 16.0
margin_top = 115.0
margin_right = 130.0
margin_bottom = 139.0
focus_mode = 1
mouse_filter = 1
enabled_focus_mode = 1
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="TabContainer/File"]
margin_left = 16.0
margin_top = 14.0
margin_right = 130.0
margin_bottom = 38.0
focus_mode = 1
mouse_filter = 1
enabled_focus_mode = 1
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongNameEdit" type="LineEdit" parent="TabContainer/File"]
margin_left = 153.0
margin_top = 15.0
margin_right = 293.0
margin_bottom = 32.0
focus_mode = 1
mouse_filter = 1
placeholder_text = "Song Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifButton" type="OptionButton" parent="TabContainer/File"]
margin_left = 149.0
margin_top = 39.0
margin_right = 296.0
margin_bottom = 59.0
focus_mode = 1
mouse_filter = 1
enabled_focus_mode = 1
text = " Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chart" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Chart"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BPMBox" type="SpinBox" parent="TabContainer/Chart/VBoxContainer"]
margin_right = 292.0
margin_bottom = 14.0
mouse_filter = 1
allow_greater = true
allow_lesser = true
prefix = "BPM"

[node name="Section" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SwapSection" type="Button" parent="TabContainer/Section"]
margin_left = 16.0
margin_top = 16.0
margin_right = 130.0
margin_bottom = 48.0
focus_mode = 1
mouse_filter = 1
enabled_focus_mode = 1
text = "Swap Section"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Script" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 22.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScriptTextEdit" type="TextEdit" parent="TabContainer/Script"]
margin_right = 304.0
margin_bottom = 383.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
highlight_current_line = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true
hiding_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_ChartSideHUD_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ChartSideHUD_mouse_exited"]
[connection signal="pressed" from="TabContainer/File/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="TabContainer/File/SaveAsButton" to="." method="_on_SaveAsButton_pressed"]
[connection signal="pressed" from="TabContainer/File/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="TabContainer/File/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="text_changed" from="TabContainer/File/SongNameEdit" to="." method="_on_SongNameEdit_text_changed"]
[connection signal="item_selected" from="TabContainer/File/DifButton" to="." method="_on_DifButton_item_selected"]
[connection signal="value_changed" from="TabContainer/Chart/VBoxContainer/BPMBox" to="." method="_on_BPMBox_value_changed"]
[connection signal="pressed" from="TabContainer/Section/SwapSection" to="." method="_on_SwapSection_pressed"]
